- Fixed page overflow on mobile viewports and added home nav to mobile menus on Rock theme

--- a/RockWeb/Themes/Rock/Styles/_variables.less
+++ b/RockWeb/Themes/Rock/Styles/_variables.less
@@ -53,6 +53,8 @@
 @help-color-hex: #3d70b2; // The color of the help icon used in Rock. #color
 @required-field-color: #d4442e; // Color of the small dot that denotes required fields. #color
 
+@link-hover-decoration: none;
+
 // Text Conversion
 @help-color: fade(@help-color-hex, 80%);
 
